[package]
name = "torrents"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-queue = "0.3"
kdam = { version = "0.5", features = ["rayon"] }
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
retry = { version = "2", features = ["random"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
